<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="title"
            type="String" />

        <variable
            name="date"
            type="String" />

        <variable
            name="time"
            type="String" />

        <variable
            name="description"
            type="String" />

        <variable
            name="price"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.views.fragments.EventDetailFragment">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_details"
            style="@style/textTitle"
            android:layout_marginTop="@dimen/margin_big"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small">

                <ImageView
                    android:id="@+id/ivEventImage"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/detail_image_height"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/tvEventTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{title}"
                    style="@style/textSubtitle"
                    android:layout_marginTop="@dimen/margin_small"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivEventImage"
                    tools:text="Título"/>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideLine"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5"/>

                <TextView
                    android:id="@+id/tvEventDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{date}"
                    style="@style/textDetail"
                    android:layout_marginTop="@dimen/margin_medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvEventTitle"
                    app:layout_constraintEnd_toStartOf="@id/guideLine"
                    tools:text="01/01/1990"/>

                <TextView
                    android:id="@+id/tvEventTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{time}"
                    style="@style/textDetail"
                    android:textAlignment="textEnd"
                    android:layout_marginTop="@dimen/margin_medium"
                    app:layout_constraintStart_toEndOf="@id/guideLine"
                    app:layout_constraintTop_toBottomOf="@id/tvEventTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="12:00"/>

                <TextView
                    android:id="@+id/tvEventDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{description}"
                    style="@style/textDetail"
                    android:layout_marginTop="@dimen/margin_small"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvEventDate"
                    tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
                    />

                <TextView
                    android:id="@+id/tvEventPrice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/textDetail"
                    android:text="@{price}"
                    android:layout_marginTop="@dimen/margin_small"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/guideLine"
                    app:layout_constraintTop_toBottomOf="@id/tvEventDescription"
                    tools:text="Valor: R$0,00"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_maps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/go_to"
                    android:background="@drawable/button_border"
                    android:layout_marginTop="@dimen/margin_big"
                    app:layout_constraintEnd_toStartOf="@id/guideLine"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvEventPrice"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_subscription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subscription"
                    android:background="@drawable/button_border"
                    android:layout_marginTop="@dimen/margin_big"
                    app:layout_constraintStart_toEndOf="@id/guideLine"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvEventPrice"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>